Fix: popup z-index

--- a/app/src/sass/components/_Translator.scss
+++ b/app/src/sass/components/_Translator.scss
@@ -12,4 +12,5 @@
     border-radius: 5px;
     background-color: #fff;
     box-shadow: $box-shadow;
+    z-index: 10;
 }
